src/main/java/com/krisztianszenasi/beetroot/.antlr/BeetrootParser.py
# Generated from /Users/krisztianszenasi/git/bme/msc/semester1/Beetroot3/src/main/java/com/krisztianszenasi/beetroot/Beetroot.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BeetrootParser ( Parser ):

    grammarFileName = "Beetroot.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'['", "']'", "'{'", "'}'", 
                     "':'", "','", "'.'", "'=='", "'!='", "'not'", "'<'", 
                     "'>'", "'<='", "'>='", "'in'", "'='", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'->'", "'and'", "'or'", "'fun'", 
                     "'if'", "'elif'", "'else'", "'while'", "'for'", "'end'", 
                     "'var'", "'val'", "'return'", "'break'", "'continue'", 
                     "'int'", "'dec'", "'str'", "'bool'", "'any'", "'none'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'true'", "'false'", 
                     "'maybe'", "'list'", "'dict'", "'range'" ]

    symbolicNames = [ "<INVALID>", "LPAREN", "RPARAEN", "LBRACKET", "RBRACKET", 
                      "LCURLY", "RCURLY", "COLON", "COMMA", "DOT", "EQ", 
                      "NEQ", "NEG", "LT", "GT", "LTE", "GTE", "IN", "ASSIGN", 
                      "PLUS", "MINUS", "MUL", "DIV", "REMINDER", "ARROW", 
                      "AND", "OR", "FUN", "IF", "ELIF", "ELSE", "WHILE", 
                      "FOR", "END", "VAR", "VAL", "RETURN", "BREAK", "CONTINUE", 
                      "INT_T", "DEC_T", "STR_T", "BOOL_T", "ANY_T", "NONE_LIT", 
                      "INT_LIT", "DEC_LIT", "STR_LIT", "TRUE_LIT", "FALSE_LIT", 
                      "MAYBE_LIT", "LIST_T", "DICT_T", "RANGE_T", "NEWLINE", 
                      "WS", "ID", "LINE_COMMENT" ]

    RULE_file = 0
    RULE_block = 1
    RULE_statement = 2
    RULE_simpleStatement = 3
    RULE_compoundStatement = 4
    RULE_newline = 5
    RULE_flowControl = 6
    RULE_variableDeclaration = 7
    RULE_assignmentStatement = 8
    RULE_expression = 9
    RULE_returnStatement = 10
    RULE_mutability = 11
    RULE_variableName = 12
    RULE_declarationType = 13
    RULE_type = 14
    RULE_assignment = 15
    RULE_primary = 16
    RULE_addSubOp = 17
    RULE_mulDivOp = 18
    RULE_compairOp = 19
    RULE_logicalOp = 20
    RULE_rangeType = 21
    RULE_collectionType = 22
    RULE_primitiveType = 23
    RULE_listType = 24
    RULE_dictType = 25
    RULE_keyType = 26
    RULE_valueType = 27
    RULE_parenthesizedExpression = 28
    RULE_unaryExpression = 29
    RULE_functionCall = 30
    RULE_literalExpression = 31
    RULE_unaryOperator = 32
    RULE_stringLiteral = 33
    RULE_numberLiteral = 34
    RULE_collectionLiteral = 35
    RULE_noneLiteral = 36
    RULE_variableReference = 37
    RULE_boolLiteral = 38
    RULE_listLiteral = 39
    RULE_dictLiteral = 40
    RULE_dictElement = 41
    RULE_key = 42
    RULE_value = 43
    RULE_ifStatement = 44
    RULE_whileStatement = 45
    RULE_forStatement = 46
    RULE_functionDefinition = 47
    RULE_functionName = 48
    RULE_functionParameters = 49
    RULE_functionParameter = 50
    RULE_functionReturnType = 51
    RULE_forHeader = 52
    RULE_elifBlock = 53
    RULE_elseBlock = 54

    ruleNames =  [ "file", "block", "statement", "simpleStatement", "compoundStatement", 
                   "newline", "flowControl", "variableDeclaration", "assignmentStatement", 
                   "expression", "returnStatement", "mutability", "variableName", 
                   "declarationType", "type", "assignment", "primary", "addSubOp", 
                   "mulDivOp", "compairOp", "logicalOp", "rangeType", "collectionType", 
                   "primitiveType", "listType", "dictType", "keyType", "valueType", 
                   "parenthesizedExpression", "unaryExpression", "functionCall", 
                   "literalExpression", "unaryOperator", "stringLiteral", 
                   "numberLiteral", "collectionLiteral", "noneLiteral", 
                   "variableReference", "boolLiteral", "listLiteral", "dictLiteral", 
                   "dictElement", "key", "value", "ifStatement", "whileStatement", 
                   "forStatement", "functionDefinition", "functionName", 
                   "functionParameters", "functionParameter", "functionReturnType", 
                   "forHeader", "elifBlock", "elseBlock" ]

    EOF = Token.EOF
    LPAREN=1
    RPARAEN=2
    LBRACKET=3
    RBRACKET=4
    LCURLY=5
    RCURLY=6
    COLON=7
    COMMA=8
    DOT=9
    EQ=10
    NEQ=11
    NEG=12
    LT=13
    GT=14
    LTE=15
    GTE=16
    IN=17
    ASSIGN=18
    PLUS=19
    MINUS=20
    MUL=21
    DIV=22
    REMINDER=23
    ARROW=24
    AND=25
    OR=26
    FUN=27
    IF=28
    ELIF=29
    ELSE=30
    WHILE=31
    FOR=32
    END=33
    VAR=34
    VAL=35
    RETURN=36
    BREAK=37
    CONTINUE=38
    INT_T=39
    DEC_T=40
    STR_T=41
    BOOL_T=42
    ANY_T=43
    NONE_LIT=44
    INT_LIT=45
    DEC_LIT=46
    STR_LIT=47
    TRUE_LIT=48
    FALSE_LIT=49
    MAYBE_LIT=50
    LIST_T=51
    DICT_T=52
    RANGE_T=53
    NEWLINE=54
    WS=55
    ID=56
    LINE_COMMENT=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(BeetrootParser.BlockContext,0)


        def EOF(self):
            return self.getToken(BeetrootParser.EOF, 0)

        def getRuleIndex(self):
            return BeetrootParser.RULE_file




    def file_(self):

        localctx = BeetrootParser.FileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_file)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.block()
            self.state = 111
            self.match(BeetrootParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def newline(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BeetrootParser.NewlineContext)
            else:
                return self.getTypedRuleContext(BeetrootParser.NewlineContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BeetrootParser.StatementContext)
            else:
                return self.getTypedRuleContext(BeetrootParser.StatementContext,i)


        def getRuleIndex(self):
            return BeetrootParser.RULE_block




    def block(self):

        localctx = BeetrootParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 113
                self.newline()


            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 73166441181351978) != 0):
                self.state = 116
                self.statement()


            self.state = 124
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 119
                    self.newline()
                    self.state = 120
                    self.statement() 
                self.state = 126
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==54:
                self.state = 127
                self.newline()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simpleStatement(self):
            return self.getTypedRuleContext(BeetrootParser.SimpleStatementContext,0)


        def compoundStatement(self):
            return self.getTypedRuleContext(BeetrootParser.CompoundStatementContext,0)


        def getRuleIndex(self):
            return BeetrootParser.RULE_statement




    def statement(self):

        localctx = BeetrootParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 132
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 3, 5, 12, 19, 20, 34, 35, 36, 37, 38, 44, 45, 46, 47, 48, 49, 56]:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.simpleStatement()
                pass
            elif token in [27, 28, 31, 32]:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.compoundStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimpleStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(BeetrootParser.VariableDeclarationContext,0)


        def assignmentStatement(self):
            return self.getTypedRuleContext(BeetrootParser.AssignmentStatementContext,0)


        def expression(self):
            return self.getTypedRuleContext(BeetrootParser.ExpressionContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(BeetrootParser.ReturnStatementContext,0)


        def flowControl(self):
            return self.getTypedRuleContext(BeetrootParser.FlowControlContext,0)


        def getRuleIndex(self):
            return BeetrootParser.RULE_simpleStatement




    def simpleStatement(self):

        localctx = BeetrootParser.SimpleStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_simpleStatement)
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.variableDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.assignmentStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 136
                self.expression(0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 137
                self.returnStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 138
                self.flowControl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompoundStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifStatement(self):
            return self.getTypedRuleContext(BeetrootParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(BeetrootParser.WhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(BeetrootParser.ForStatementContext,0)


        def functionDefinition(self):
            return self.getTypedRuleContext(BeetrootParser.FunctionDefinitionContext,0)


        def getRuleIndex(self):
            return BeetrootParser.RULE_compoundStatement




    def compoundStatement(self):

        localctx = BeetrootParser.CompoundStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_compoundStatement)
        try:
            self.state = 145
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [28]:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.ifStatement()
                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.whileStatement()
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 3)
                self.state = 143
                self.forStatement()
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 4)
                self.state = 144
                self.functionDefinition()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NewlineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(BeetrootParser.NEWLINE)
            else:
                return self.getToken(BeetrootParser.NEWLINE, i)

        def getRuleIndex(self):
            return BeetrootParser.RULE_newline




    def newline(self):

        localctx = BeetrootParser.NewlineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_newline)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 147
                    self.match(BeetrootParser.NEWLINE)

                else:
                    raise NoViableAltException(self)
                self.state = 150 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FlowControlContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(BeetrootParser.BREAK, 0)

        def CONTINUE(self):
            return self.getToken(BeetrootParser.CONTINUE, 0)

        def getRuleIndex(self):
            return BeetrootParser.RULE_flowControl




    def flowControl(self):

        localctx = BeetrootParser.FlowControlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_flowControl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            _la = self._input.LA(1)
            if not(_la==37 or _la==38):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mutability(self):
            return self.getTypedRuleContext(BeetrootParser.MutabilityContext,0)


        def variableName(self):
            return self.getTypedRuleContext(BeetrootParser.VariableNameContext,0)


        def declarationType(self):
            return self.getTypedRuleContext(BeetrootParser.DeclarationTypeContext,0)


        def ASSIGN(self):
            return self.getToken(BeetrootParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(BeetrootParser.ExpressionContext,0)


        def getRuleIndex(self):
            return BeetrootParser.RULE_variableDeclaration




    def variableDeclaration(self):

        localctx = BeetrootParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_variableDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.mutability()
            self.state = 155
            self.variableName()
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 156
                self.declarationType()


            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18:
                self.state = 159
                self.match(BeetrootParser.ASSIGN)
                self.state = 160
                self.expression(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primary(self):
            return self.getTypedRuleContext(BeetrootParser.PrimaryContext,0)


        def assignment(self):
            return self.getTypedRuleContext(BeetrootParser.AssignmentContext,0)


        def expression(self):
            return self.getTypedRuleContext(BeetrootParser.ExpressionContext,0)


        def getRuleIndex(self):
            return BeetrootParser.RULE_assignmentStatement




    def assignmentStatement(self):

        localctx = BeetrootParser.AssignmentStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_assignmentStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.primary(0)
            self.state = 164
            self.assignment()
            self.state = 165
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BeetrootParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class PrimaryExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeetrootParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def primary(self):
            return self.getTypedRuleContext(BeetrootParser.PrimaryContext,0)



    class MulDivExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeetrootParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BeetrootParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(BeetrootParser.ExpressionContext,i)

        def mulDivOp(self):
            return self.getTypedRuleContext(BeetrootParser.MulDivOpContext,0)



    class AddSubExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeetrootParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BeetrootParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(BeetrootParser.ExpressionContext,i)

        def addSubOp(self):
            return self.getTypedRuleContext(BeetrootParser.AddSubOpContext,0)



    class CompairExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeetrootParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BeetrootParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(BeetrootParser.ExpressionContext,i)

        def compairOp(self):
            return self.getTypedRuleContext(BeetrootParser.CompairOpContext,0)



    class RangeExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeetrootParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BeetrootParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(BeetrootParser.ExpressionContext,i)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(BeetrootParser.DOT)
            else:
                return self.getToken(BeetrootParser.DOT, i)


    class LogicalExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeetrootParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BeetrootParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(BeetrootParser.ExpressionContext,i)

        def logicalOp(self):
            return self.getTypedRuleContext(BeetrootParser.LogicalOpContext,0)




    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = BeetrootParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = BeetrootParser.PrimaryExpressionContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 168
            self.primary(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 192
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 190
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                    if la_ == 1:
                        localctx = BeetrootParser.MulDivExpressionContext(self, BeetrootParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 170
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 171
                        self.mulDivOp()
                        self.state = 172
                        self.expression(6)
                        pass

                    elif la_ == 2:
                        localctx = BeetrootParser.AddSubExpressionContext(self, BeetrootParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 174
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 175
                        self.addSubOp()
                        self.state = 176
                        self.expression(5)
                        pass

                    elif la_ == 3:
                        localctx = BeetrootParser.CompairExpressionContext(self, BeetrootParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 178
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 179
                        self.compairOp()
                        self.state = 180
                        self.expression(4)
                        pass

                    elif la_ == 4:
                        localctx = BeetrootParser.LogicalExpressionContext(self, BeetrootParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 182
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 183
                        self.logicalOp()
                        self.state = 184
                        self.expression(3)
                        pass

                    elif la_ == 5:
                        localctx = BeetrootParser.RangeExpressionContext(self, BeetrootParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 186
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 187
                        self.match(BeetrootParser.DOT)
                        self.state = 188
                        self.match(BeetrootParser.DOT)
                        self.state = 189
                        self.expression(2)
                        pass

             
                self.state = 194
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(BeetrootParser.RETURN, 0)

        def expression(self):
            return self.getTypedRuleContext(BeetrootParser.ExpressionContext,0)


        def getRuleIndex(self):
            return BeetrootParser.RULE_returnStatement




    def returnStatement(self):

        localctx = BeetrootParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_returnStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 195
            self.match(BeetrootParser.RETURN)
            self.state = 196
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MutabilityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
